--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
+    "google-auth-library": "^9.15.1",
     "i": "^0.3.7",
     "jwt-decode": "^4.0.0",
     "npm": "^11.0.0",
