--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.66.11",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.10",
     "generate-react-cli": "^8.4.9",
     "google-auth-library": "^9.15.1",
     "i": "^0.3.7",
